--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 header {
     background: #ffffff;
-    color: khaki;
+    color: #4B5320;
     padding: 20px;
     text-align: center;
 }
@@ -53,6 +53,7 @@ footer {
     width: 200px;
     margin-bottom: 10px;
 }
+
 
 
 
