--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
 }
 
 nav a {
-    color: white;
+    color: #4B5320;
     margin: 0 10px;
     text-decoration: none;
     font-weight: bold;
@@ -53,6 +53,7 @@ footer {
     width: 300px;
     margin-bottom: 10px;
 }
+
 
 
 
